--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ version = "0.1.0"
 cortex-m = "0.6.0"
 cortex-m-rt = "0.6.10"
 cortex-m-semihosting = "0.3.3"
-panic-halt = "0.2.0"
+# panic-halt = "0.2.0"
+panic-semihosting = "0.5.3"
 embedded-hal = "0.2.3"
 stm32f4xx-hal = { version = "0.7.0", features = ["stm32f413", "rt"] }
+nb = "0.1.2"
 
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
