--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ panic-semihosting = "0.5.3"
 embedded-hal = "0.2.3"
 stm32f4xx-hal = { version = "0.7.0", features = ["stm32f413", "rt"] }
 nb = "0.1.2"
+numtoa = "0.2.3"
 
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
