--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ cortex-m-semihosting = "0.3.3"
 # panic-halt = "0.2.0"
 panic-semihosting = "0.5.3"
 embedded-hal = "0.2.3"
-stm32f4xx-hal = { version = "0.7.0", features = ["stm32f413", "rt"] }
+stm32f4xx-hal = { git = "https://github.com/kevswims/stm32f4xx-hal", features = ["stm32f413", "rt", "usb_fs"] }
 nb = "0.1.2"
 numtoa = "0.2.3"
+usb-device = "0.2.4"
+usbd-serial = "0.1"
 
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
